--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="一个简单的分享知识的个人网站，同时也是一份笔记">
   <meta name="author" content="HideRua">
-  <title>Vite App</title>
+  <title></title>
 </head>
 
 <body>
